--- a/static/frontpage.html
+++ b/static/frontpage.html
@@ -48,16 +48,17 @@
       </div>
 
       <div class="wrapper">
-        <form action="">
+        <form action="/auth" method="post" > <!--new-->
           <h1 class="login-title">Login</h1>
           <div class="input-box">
-            <input type="text" id="username" placeholder="Username" required />
+            <input type="text" id="username" name="username" placeholder="Username" required />
           </div>
 
           <div class="input-box">
             <input
               type="password"
               id="password"
+              name="password"
               placeholder="Password"
               required
             />
@@ -66,7 +67,7 @@
             <label> <input type="checkbox" /> Remember me</label>
             <a href="#">Forgot password?</a>
           </div>
-          <button id="login" type="button" class="btn">Login</button>
+          <button id="login" type="submit" class="btn">Login</button> <!--change to type "submit"-->
 
           <div class="register-link">
             <p>Don't have an account? <a href="#">Register</a></p>
@@ -76,7 +77,7 @@
     </div>
 
     <script>
-      var users = [
+      /*var users = [
         { username: "visitor", password: "Visitorpassword123*", href: "visitor_login_frontpage.html" },
         { username: "employee", password: "Employeepassword123*", href: "employee_login_frontpage.html" },
         { username: "manager", password: "Managerpassword123*", href: "manager_login_frontpage.html" },
@@ -110,7 +111,7 @@
             alert("You have entered an invalid username or password");
           }
         }
-      };
+      }; */
     </script>
   </body>
 </html>
