--- a/static/frontpage.html
+++ b/static/frontpage.html
@@ -39,8 +39,8 @@
           an impressive array of over 70,000 artworks from six continents, takes
           visitors on a captivating journey through over 6,000 years of history.
           With its diverse and extensive range of masterpieces, the museum
-          offers an enriching experience that transcends time and place,
-          celebrating the rich tapestry of global artistic heritage.
+          offers an enriching experience that transcends time,
+          celebrating the rich tapestry of global artistic heritage. 
         </p>
 
       </div>
